[project]
name = "streamlit-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair[all]>=6.1.0",
    "azure-identity>=1.25.3",
    "azure-storage-blob>=12.29.0",
    "deltalake>=1.6.0",
    "fastmcp>=3.4.2",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.0.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[anthropic,openai]>=1.106.0",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
]
